@@ -108,6 +108,7 @@ sub find_duplicate_keys {
    my @keys = @$keys;
    my %seen; # Avoid outputting a key more than once.
    my @result;
+
    foreach my $i ( 0..$#keys - 1 ) {
       foreach my $j ( $i+1..$#keys ) {
          my $i_cols = $keys[$i]->{cols};
@@ -125,6 +126,39 @@ sub find_duplicate_keys {
          }
       }
    }
+
+   # If the key ends with a prefix of the primary key, it's a duplicate.
+   if ( $opts->{clustered} && $opts->{engine} =~ m/^(?:InnoDB|solidDB)$/ ) {
+      my $i = 0;
+      my $found = 0;
+      while ( $i < @keys ) {
+         if ( $keys[$i]->{name} eq 'PRIMARY' ) {
+            $found = 1;
+            last;
+         }
+         $i++;
+      }
+      if ( $found ) {
+         my $pkcols = $keys[$i]->{cols};
+         KEY:
+         foreach my $j ( 0..$#keys ) {
+            next KEY if $i == $j;
+            my $suffix = $keys[$j]->{cols};
+            SUFFIX:
+            while ( $suffix =~ s/`[^`]+`,// ) {
+               my $len = min(length($pkcols), length($suffix));
+               if ( (($keys[$i]->{struct} eq $keys[$j]->{struct}) || $opts->{ignore_type})
+                  && substr($suffix, 0, $len) eq substr($pkcols, 0, $len))
+               {
+                  push @result, $keys[$i] unless $seen{$i}++;
+                  push @result, $keys[$j] unless $seen{$j}++;
+                  last SUFFIX;
+               }
+            }
+         }
+      }
+   }
+
    return \@result;
 }
 
@@ -180,6 +214,7 @@ if ( !caller ) {
       { s => 'allatonce|s',    d => 'Print only once, instead of one DB at a time' },
       { s => 'allstruct|a',    d => 'Compare indexes with different structs (BTREE, HASH, etc)' },
       { s => 'askpass',        d => 'Prompt for password for connections' },
+      { s => 'clustered|c',    d => 'PK columns appended to secondary key is duplicate' },
       { s => 'databases|d=s',  d => 'Only do this comma-separated list of databases' },
       { s => 'defaults-file|F=s', d => 'Only read default options from the given file' },
       { s => 'function|f=s',   d => 'Do f=foreign keys, k=keys.  Default is do both.' },
@@ -297,6 +332,7 @@ if ( !caller ) {
    my $ic_opts = {
       ignore_type  => $opts{a},
       ignore_order => $opts{ignoreorder},
+      clustered    => $opts{c},
    };
 
    DATABASE:
@@ -357,7 +393,7 @@ if ( !caller ) {
             }
             else { # Find duplicate/redundant by prefix matching.
                push @to_print, map { make_hash($hash, 'KEY', $_) }
-                  @{$ic->find_duplicate_keys($hash->{keys}, $ic_opts)};
+                  @{$ic->find_duplicate_keys($hash->{keys}, { engine => $engine, %$ic_opts})};
             }
          }
 
@@ -478,6 +514,23 @@ duplicate, for example.
 =item --askpass
 
 Prompt for password for connections.
+
+=item --clustered
+
+Detects when a suffix of a secondary key is a leftmost prefix of the primary
+key, and treats it as a duplicate key.  Only detects this condition on storage
+engines whose primary keys are clustered (currently InnoDB and solidDB).
+
+Clustered storage engines append the primary key columns to the leaf nodes of
+all secondary keys anyway, so you might consider it redundant to have them
+appear in the internal nodes as well.  Of course, you may also want them in the
+internal nodes, because just having them at the leaf nodes won't help for some
+queries.  It does help for covering index queries, however.
+
+Here's an example of a key that is considered redundant with this option:
+
+  PRIMARY KEY  (`a`)
+  KEY `b` (`b`,`a`)
 
 =item --databases
 
