@@ -1,0 +1,24 @@
+CREATE TABLE `db` (
+  `Host` char(60) collate utf8_bin NOT NULL default '',
+  `Db` char(64) collate utf8_bin NOT NULL default '',
+  `User` char(16) collate utf8_bin NOT NULL default '',
+  `Select_priv` enum('N','Y') character set utf8 NOT NULL default 'N',
+  `Insert_priv` enum('N','Y') character set utf8 NOT NULL default 'N',
+  `Update_priv` enum('N','Y') character set utf8 NOT NULL default 'N',
+  `Delete_priv` enum('N','Y') character set utf8 NOT NULL default 'N',
+  `Create_priv` enum('N','Y') character set utf8 NOT NULL default 'N',
+  `Drop_priv` enum('N','Y') character set utf8 NOT NULL default 'N',
+  `Grant_priv` enum('N','Y') character set utf8 NOT NULL default 'N',
+  `References_priv` enum('N','Y') character set utf8 NOT NULL default 'N',
+  `Index_priv` enum('N','Y') character set utf8 NOT NULL default 'N',
+  `Alter_priv` enum('N','Y') character set utf8 NOT NULL default 'N',
+  `Create_tmp_table_priv` enum('N','Y') character set utf8 NOT NULL default 'N',
+  `Lock_tables_priv` enum('N','Y') character set utf8 NOT NULL default 'N',
+  `Create_view_priv` enum('N','Y') character set utf8 NOT NULL default 'N',
+  `Show_view_priv` enum('N','Y') character set utf8 NOT NULL default 'N',
+  `Create_routine_priv` enum('N','Y') character set utf8 NOT NULL default 'N',
+  `Alter_routine_priv` enum('N','Y') character set utf8 NOT NULL default 'N',
+  `Execute_priv` enum('N','Y') character set utf8 NOT NULL default 'N',
+  PRIMARY KEY  (`Host`,`Db`,`User`),
+  KEY `User` (`User`)
+) ENGINE=InnoDB;
